[package]
name = "renderdoc-buffer-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2", features = ["derive"] }
humantime = "2.1"
strum = {version = "0.24", features = ["derive"] }
thiserror = "1"

# [profile.release]
# debug = true